docs: Fix heading alignment

--- a/source/stylesheets/pages/_docs.scss
+++ b/source/stylesheets/pages/_docs.scss
@@ -67,7 +67,7 @@ body.docs .overview-section {
 
   padding: 3rem 0;
 
-  .docs-header-navigation-container h2 {
+  .docs-header-navigation-container > h2 {
     text-align: center;
   }
 
